# build-webos

./: .gitignore  .gitmodules  README.md  configure  configure.ac  mcf  runqemuarm  runqemux86
build-templates/: Makefile.in  bblayers-conf.in  bitbake-rc.in  local-conf.in  mcf-status.in
scripts/: prerequisites.sh  tag_bitbake.sh  tag_oe.sh
